--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,16 @@
 on: [push, pull_request, workflow_dispatch]
-
 name: Build
-
 jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: zmkfirmware/zmk-build-arm:2.5
+      image: zmkfirmware/zmk-build-arm:stable
     name: Build
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Cache west modules
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         env:
           cache-name: cache-zephyr-modules
         with:
@@ -33,29 +31,50 @@ jobs:
         run: west update
       - name: West Zephyr export
         run: west zephyr-export
-      - name: West Build (KEYBOARD_TITLE Left)
-        run: west build -s zmk/app -b BOARD_NAME -- -DSHIELD=SHIELD_NAME_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: KEYBOARD_TITLE DTS File
-        if: ${{ always() }}
-        run: cat -n build/zephyr/BOARD_NAME.dts.pre.tmp
-      - name: KEYBOARD_TITLE Left Kconfig file
+      - name: West Build (corne Left)
+        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_left -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Check build status
+        run: |
+          if [ -f "build/zephyr/zmk.uf2" ]; then
+            echo "Build successful. zmk.uf2 file found."
+          else
+            echo "Build may have failed. zmk.uf2 file not found."
+            exit 1
+          fi
+      - name: corne DTS File
+        if: always()
+        run: |
+          if [ -f "build/zephyr/nice_nano_v2.dts.pre.tmp" ]; then
+            cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
+          else
+            echo "DTS file not found. Listing build directory contents:"
+            ls -R build
+          fi
+      - name: corne Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 SHIELD_NAME_left_BOARD_NAME.uf2
-      - name: Archive (KEYBOARD_TITLE Left)
-        uses: actions/upload-artifact@v2
+        run: cp build/zephyr/zmk.uf2 corne_left_nice_nano_v2.uf2
+      - name: Archive (corne Left)
+        uses: actions/upload-artifact@v3
         with:
-          name: firmware
-          path: SHIELD_NAME_left_BOARD_NAME.uf2
-      - name: West Build (KEYBOARD_TITLE Right)
-        run: west build --pristine -s zmk/app -b BOARD_NAME -- -DSHIELD=SHIELD_NAME_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-
-      - name: KEYBOARD_TITLE Right Kconfig file
+          name: firmware-left
+          path: corne_left_nice_nano_v2.uf2
+      - name: West Build (corne Right)
+        run: west build --pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=corne_right -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: Check build status (Right)
+        run: |
+          if [ -f "build/zephyr/zmk.uf2" ]; then
+            echo "Build successful. zmk.uf2 file found."
+          else
+            echo "Build may have failed. zmk.uf2 file not found."
+            exit 1
+          fi
+      - name: corne Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 SHIELD_NAME_right_BOARD_NAME.uf2
-      - name: Archive (KEYBOARD_TITLE Right)
-        uses: actions/upload-artifact@v2
+      - name: Rename zmk.uf2 (Right)
+        run: cp build/zephyr/zmk.uf2 corne_right_nice_nano_v2.uf2
+      - name: Archive (corne Right)
+        uses: actions/upload-artifact@v3
         with:
-          name: firmware
-          path: SHIELD_NAME_right_BOARD_NAME.uf2
+          name: firmware-right
+          path: corne_right_nice_nano_v2.uf2
