--- a/config/behaviors/behavior_layer_toggle_hold_tap.dtsi
+++ b/config/behaviors/behavior_layer_toggle_hold_tap.dtsi
@@ -1,6 +1,6 @@
 / {
   behaviors {
-    behavior_layer_toggle_hold_tap {
+    lt_alt: behavior_layer_toggle_hold_tap {
       compatible = "zmk,behavior-hold-tap";
       label = "LAYER_TOGGLE_HOLD_TAP";
       #binding-cells = <0>;
