--- a/config/behaviors/behavior_layer_toggle_hold_tap.dtsi
+++ b/config/behaviors/behavior_layer_toggle_hold_tap.dtsi
@@ -3,12 +3,10 @@
     lt_alt: behavior_layer_toggle_hold_tap {
       compatible = "zmk,behavior-hold-tap";
       label = "LAYER_TOGGLE_HOLD_TAP";
-      #binding-cells = <0>;
-
-      tapping-term-ms = <200>;
+      #binding-cells = <2>;
       flavor = "tap-preferred";
-
-      bindings = <&to 3>, <&kp RALT>; // tap -> переключение слоя, hold -> обычный Alt
+      tapping-term-ms = <200>;
+      bindings = <&to>, <&kp>;
     };
   };
 }; 
