--- a/config/behaviors/behavior_layer_toggle_hold_tap.dtsi
+++ b/config/behaviors/behavior_layer_toggle_hold_tap.dtsi
@@ -6,7 +6,7 @@
       #binding-cells = <2>; // важно: два параметра!
       flavor = "hold-preferred";
       tapping-term-ms = <200>;
-      bindings = <&kp RALT>, <&to 0>;
+      bindings = <&kp RALT &to 0>;
     };
   };
 };
