--- a/config/behaviors/behavior_layer_toggle_hold_tap.dtsi
+++ b/config/behaviors/behavior_layer_toggle_hold_tap.dtsi
@@ -1,12 +1,12 @@
 / {
   behaviors {
-    lt_alt: behavior_hold_tap {
+    lt_esc: behavior_hold_tap {
       compatible = "zmk,behavior-hold-tap";
-      label = "LT(0, RALT)";
+      label = "LT(0, ESC)";
       #binding-cells = <2>;
       flavor = "hold-preferred";
       tapping-term-ms = <200>;
-      bindings = <&kp>, <&to>;
+      bindings = <&to>, <&kp>;
     };
   };
 };
