--- a/config/behaviors/behavior_layer_toggle_hold_tap_eng.dtsi
+++ b/config/behaviors/behavior_layer_toggle_hold_tap_eng.dtsi
@@ -6,7 +6,7 @@
       #binding-cells = <2>;
       flavor = "tap-preferred";
       tapping-term-ms = <200>;
-      bindings = <&to>, <&kp LC(LS(N0))>;
+      bindings = <&to>, <&kp>;
     };
   };
 };
