Revert "test combination"
This reverts commit 34a47529906d7be3966ebc3012a0710d27378271.

--- a/config/behaviors/behavior_layer_toggle_hold_tap_rus.dtsi
+++ b/config/behaviors/behavior_layer_toggle_hold_tap_rus.dtsi
@@ -6,7 +6,7 @@
       #binding-cells = <2>;
       flavor = "tap-preferred";
       tapping-term-ms = <200>;
-      bindings = <&to>, <&kp>;
+      bindings = <&to>, <&kp LC(LS(N1))>;
     };
   };
 };
