--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -1,20 +1,20 @@
 / {
   behaviors {
-    esc_macro_to_russian: macro {
-      compatible = "zmk,behavior-macro";
-      label = "ESC_TO_RUSSIAN";
+    esc_layer_switch: behavior_macro_two_param {
+      compatible = "zmk,behavior-macro-two-param";
+      #binding-cells = <2>;
+      wait-ms = <0>;
+      tap-ms = <0>;
       bindings = <
-        &to 3
-        &kp LC(LS(N1))
-      >;
-    };
-
-    esc_macro_to_default: macro {
-      compatible = "zmk,behavior-macro";
-      label = "ESC_TO_DEFAULT";
-      bindings = <
-        &to 0
-        &kp LC(LS(N0))
+        &macro_param_1to1
+        , <&macro_press &to MACRO_PLACEHOLDER>
+        , <&macro_param_2to1>
+        , <&macro_press &kp MACRO_PLACEHOLDER>
+        , <&macro_pause_for_release>
+        , <&macro_param_2to1>
+        , <&macro_release &kp MACRO_PLACEHOLDER>
+        , <&macro_param_1to1>
+        , <&macro_release &to MACRO_PLACEHOLDER>
       >;
     };
 
@@ -24,7 +24,7 @@
       #binding-cells = <0>;
       flavor = "tap-preferred";
       tapping-term-ms = <200>;
-      bindings = <&esc_macro_to_russian>, <&kp ESC>;
+      bindings = <&esc_layer_switch 3 LC(LS(N1))>, <&kp ESC>;
     };
 
     lt_esc_default: behavior_hold_tap {
@@ -33,7 +33,7 @@
       #binding-cells = <0>;
       flavor = "tap-preferred";
       tapping-term-ms = <200>;
-      bindings = <&esc_macro_to_default>, <&kp ESC>;
+      bindings = <&esc_layer_switch 0 LC(LS(N0))>, <&kp ESC>;
     };
   };
 }; 
