--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -6,15 +6,8 @@
       wait-ms = <0>;
       tap-ms = <0>;
       bindings = <
-        &macro_param_1to1
-        , <&macro_press &to MACRO_PLACEHOLDER>
-        , <&macro_param_2to1>
-        , <&macro_press &kp MACRO_PLACEHOLDER>
-        , <&macro_pause_for_release>
-        , <&macro_param_2to1>
-        , <&macro_release &kp MACRO_PLACEHOLDER>
-        , <&macro_param_1to1>
-        , <&macro_release &to MACRO_PLACEHOLDER>
+        &macro_param_1to1 &to MACRO_PLACEHOLDER
+        , <&macro_param_2to1 &kp MACRO_PLACEHOLDER>
       >;
     };
 
