--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -7,7 +7,7 @@
       tap-ms = <0>;
       bindings = <
         &macro_param_1to1 &to MACRO_PLACEHOLDER
-        , &macro_param_2to1 &kp MACRO_PLACEHOLDER
+        &macro_param_2to1 &kp MACRO_PLACEHOLDER
       >;
     };
 
