--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -30,7 +30,7 @@
       #binding-cells = <0>;
       flavor = "tap-preferred";
       tapping-term-ms = <200>;
-      bindings = <&kp ESC &macro_to_russian>;
+      bindings = <&kp ESC>, <&macro_to_russian>;
     };
 
     lt_esc_default: lt_esc_default_behavior {
@@ -39,7 +39,7 @@
       #binding-cells = <0>;
       flavor = "tap-preferred";
       tapping-term-ms = <200>;
-      bindings = <&kp ESC &macro_to_default>;
+      bindings = <&kp ESC>, <&macro_to_default>;
     };
   };
 };
