--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -1,39 +1,23 @@
 / {
-  macros {
-    macro_to_russian: macro_to_russian {
-      compatible = "zmk,behavior-macro";
-      #binding-cells = <0>;
-      wait-ms = <0>;
-      tap-ms = <0>;
-      bindings = < &to 3 &kp LC(LS(N1)) >;
-    };
-
-    macro_to_default: macro_to_default {
-      compatible = "zmk,behavior-macro";
-      #binding-cells = <0>;
-      wait-ms = <0>;
-      tap-ms = <0>;
-      bindings = < &to 0 &kp LC(LS(N0)) >;
-    };
-  };
-
   behaviors {
-    lt_esc_russian: lt_esc_russian_behavior {
-      compatible = "zmk,behavior-hold-tap";
+    lt_esc_russian: lt_esc_russian {
+      compatible = "zmk,behavior-macro";
       label = "LT_ESC_RUSSIAN";
       #binding-cells = <0>;
-      flavor = "tap-preferred";
-      tapping-term-ms = <200>;
-      bindings = < &macro_to_russian &kp ESC >;
+      bindings = <
+        &to 3
+        &kp LC(LS(N1))
+      >;
     };
 
-    lt_esc_default: lt_esc_default_behavior {
-      compatible = "zmk,behavior-hold-tap";
+    lt_esc_default: lt_esc_default {
+      compatible = "zmk,behavior-macro";
       label = "LT_ESC_DEFAULT";
       #binding-cells = <0>;
-      flavor = "tap-preferred";
-      tapping-term-ms = <200>;
-      bindings = < &macro_to_default &kp ESC >;
+      bindings = <
+        &to 0
+        &kp LC(LS(N0))
+      >;
     };
   };
 };
