--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -31,5 +31,14 @@
       flavor = "tap-preferred";
       bindings = <&macro_to_eng>, <&kp>;
     };
+
+    lt_hold: lt_hold {
+      compatible = "zmk,behavior-hold-tap";
+      label = "LT_HOLD";
+      #binding-cells = <2>;
+      tapping-term-ms = <200>;
+      flavor = "tap-preferred";
+      bindings = <&kp>, <&kp>;
+    };
   };
 };
