--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -14,7 +14,7 @@
       bindings = < &to 0 &kp LC(LS(N0)) >;
     };
 
-    lt_to_rus: lt_to_rus {
+    to_rus: to_rus {
       compatible = "zmk,behavior-hold-tap";
       label = "LT_TO_RUS";
       #binding-cells = <2>;
@@ -23,13 +23,13 @@
       bindings = <&macro_to_rus>, <&kp>;
     };
 
-    lt_to_eng: lt_to_eng {
+    to_eng: to_eng {
       compatible = "zmk,behavior-hold-tap";
       label = "LT_TO_ENG";
       #binding-cells = <2>;
       tapping-term-ms = <200>;
       flavor = "tap-preferred";
-      bindings = <&macro_to_eng>, <&kp>;
+      bindings = <&kp>, <&macro_to_eng>;
     };
 
     lt_hold: lt_hold {
