--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -4,14 +4,14 @@
       compatible = "zmk,behavior-macro";
       label = "MACRO_TO_RUS";
       #binding-cells = <0>;
-      bindings = < &to 3 &kp LC(LS(N1)) >;
+      bindings = < &kp LC(LS(N1)) &to 3 >;
     };
 
     macro_to_eng: macro_to_eng {
       compatible = "zmk,behavior-macro";
       label = "MACRO_TO_ENG";
       #binding-cells = <0>;
-      bindings = < &to 0 &kp LC(LS(N0)) >;
+      bindings = < &kp LC(LS(N0)) &to 0 >;
     };
 
     to_rus: to_rus {
