--- a/config/behaviors/behavior_esc_layer_switch.dtsi
+++ b/config/behaviors/behavior_esc_layer_switch.dtsi
@@ -20,7 +20,7 @@
       #binding-cells = <2>;
       tapping-term-ms = <200>;
       flavor = "tap-preferred";
-      bindings = <&macro_to_rus>, <&kp>;
+      bindings = <&kp>, <&macro_to_rus>;
     };
 
     to_eng: to_eng {
